# Niriksha_portal

./: .env.vercel  .gitignore  ADMIN_SCREENSHOT_GUIDE.md  README.md  build_output.txt  build_output2.txt  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.lovable/: plan.md  project.json
DATABASE/Dataset/: departments.csv  users.csv
agentic_agent/: .env.example  README.md  graph.py  main.py  mock_data.py  pyproject.toml  requirements.txt  schemas.py  test_evidence.py  test_graph.py  test_mock_data.py  test_report.py  test_risk_score.py  test_schemas.py  trace_out.txt  trace_request.py  verify_helpers.py
agentic_agent/agents/: evidence_agent.py  report_agent.py  risk_agent.py
scripts/: capture-screenshots.mjs  full-setup.sql  seed-from-csv.ts
src/: routeTree.gen.ts  styles.css
src/components/: admin-sidebar.tsx  inspector-sidebar.tsx  supervisor-sidebar.tsx
src/hooks/: use-form-draft.ts
src/lib/: admin.functions.ts  ai.functions.ts  inspector.functions.ts  lovable-error-reporting.ts  supervisor.functions.ts
src/routes/: __root.tsx  auth.tsx  index.tsx
supabase/: config.toml
supabase/migrations/: 20260717065129_3730bedf-d176-491d-a166-536ad920cbe5.sql  20260717065153_1767bef3-483f-4805-ad27-0c85558f0a07.sql  20260717070205_1554a555-17b5-4456-82a9-5efd901ea629.sql  20260717072306_d164e379-516e-4567-abeb-233ea42cdfb1.sql  20260717072924_b740ff15-3e52-4481-bed4-08357c0ee2aa.sql  20260717072947_d01a2119-2071-4598-8c6e-cdafd364cb69.sql  20260717111000_add_login_password_to_profiles.sql  20260717120000_backfill_login_passwords.sql  (+7 more)
(+24 files in other folders)
